--- a/packages/state/pubspec.yaml
+++ b/packages/state/pubspec.yaml
@@ -4,7 +4,8 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0-9.0.dev <4.0.0'
+  # sdk: '>=3.1.0-9.0.dev <4.0.0'
+  sdk: ">=2.19.0 <3.0.0"
 dependencies:
   flutter:
     sdk: flutter
@@ -15,11 +16,16 @@ dependencies:
 
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
+  injectable: ^2.1.1
+  freezed_annotation: ^2.2.0
   get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  injectable_generator: ^2.1.5
+  build_runner: ^2.3.3
+  freezed: ^2.3.2
 
 flutter:
   uses-material-design: true
