--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '^3.1.0-9.0.dev'
+  # sdk: '^3.1.0-9.0.dev'
+  sdk: ">=2.19.0 <3.0.0"
 dependencies:
   flutter:
     sdk: flutter
@@ -24,6 +25,7 @@ dependencies:
   bloc: ^8.1.1
   flutter_bloc: ^8.1.2
   get_it: ^7.2.0
+  window_manager: ^0.3.2
 
 dev_dependencies:
   flutter_test:
